cmake_minimum_required( VERSION 2.8 )
project( AngelscriptExt )

include_directories( "${CMAKE_CURRENT_SOURCE_DIR}" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/angelscript/include" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/angelscript/source" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/../" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptmath" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/weakref" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scripthelper" )
file( GLOB AS_SOURCE "*.*" )
file( GLOB AS_MATH_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptmath/*.*" )
file( GLOB AS_WEAKREF_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/weakref/*.*" )
file( GLOB AS_HELPER_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scripthelper/*.*" )
add_library( AngelscriptExt ${AS_SOURCE} ${AS_MATH_SOURCE} ${AS_WEAKREF_SOURCE} ${AS_HELPER_SOURCE} )
