cmake_minimum_required( VERSION 2.8 )
project( AngelscriptExt )

include_directories( "${CMAKE_CURRENT_SOURCE_DIR}" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/angelscript/include" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/angelscript/source" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptstdstring" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptarray" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptdictionary" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptfile" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptany" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptmath" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/weakref" )
include_directories( "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scripthelper" )
file( GLOB AS_SOURCE "*.*" )
file( GLOB AS_STRING_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptstdstring/*.*" )
file( GLOB AS_ARRAY_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptarray/*.*" )
file( GLOB AS_DICTIONARY_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptdictionary/*.*" )
file( GLOB AS_FILE_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptfile/*.*" )
file( GLOB AS_ANY_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptany/*.*" )
file( GLOB AS_MATH_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scriptmath/*.*" )
file( GLOB AS_WEAKREF_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/weakref/*.*" )
file( GLOB AS_HELPER_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sdk/add_on/scripthelper/*.*" )
add_library( AngelscriptExt ${AS_SOURCE} ${AS_MATH_SOURCE} ${AS_WEAKREF_SOURCE} ${AS_HELPER_SOURCE}
	${AS_STRING_SOURCE} ${AS_ARRAY_SOURCE} ${AS_DICTIONARY_SOURCE} ${AS_FILE_SOURCE}
	${AS_ANY_SOURCE} ${AS_DATE_SOURCE} )
